--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Git Introduction</h1>
     <p>GIT REPOSITRY</p>
     <span>HELLOW</span>
+    <h2>just for practice</h2>
 </body>
 </html>
