--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Git Introduction</h1>
+    <h1>Git Intro</h1>
     <p>GIT REPOSITRY</p>
     <span>HELLOW</span>
     <h3>saas</h3>
