--- a/contact.html
+++ b/contact.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CONTACT</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Contact page</h1>
     <p>Hi iam contact page</p>
     <span>contact here</span>
     <p>03236280247</p>
+    <p>maan@leeching.net</p>
 </body>
 </html>
